@@ -1,3 +1,7 @@
+2001-02-22  Tambet Ingo  <tambet@ximian.com>
+
+	* boot.pl.in (xst_boot_conf_replace_image): Now we can delete image tags too.
+
 2001-02-22  Hans Petter Jansson  <hpj@ximian.com>
 
 	* xml.pl.in (xst_xml_quote): Put old code back in, since Chema's
